# Floptle

./: .gitattributes  .gitignore  Cargo.toml  FloptileParticleSystemPlanning.docx  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: macos-binary.yml  release.yml
assets/: .luarc.json  project.ron
assets/.floptle/: textures.ron
assets/animation_controllers/: FPHand.actl.ron  PlayerR6.actl.ron  Ty.actl.ron
assets/animations/: Idle.anim.ron  Punch.anim.ron  Test.anim.ron
assets/materials/: blue.ron  gray.ron  green.ron  orange.ron  white.ron
assets/paint/: first.tpaint  first.vpaint
assets/scenes/: first.ron  player.ron  test.ron  untitled.ron
assets/scripts/: character.lua  first_person.lua  fixedTest.lua  float.lua  freelook.lua  hand.lua  parry_dummy.lua  player_spawner.lua  (+8 more)
builds/: floptle-game.ron
crates/floptle-anim/: Cargo.toml
crates/floptle-anim/src/: lib.rs
crates/floptle-assets/: Cargo.toml
crates/floptle-assets/examples/: rig_probe.rs
crates/floptle-assets/src/: auto_rig.rs  glb_write.rs  gltf_import.rs  gltf_mirror.rs  gltf_rig.rs  lib.rs  texture.rs
crates/floptle-audio/: Cargo.toml
crates/floptle-audio/examples/: tone_probe.rs
crates/floptle-audio/src/: clip.rs  decode.rs  engine.rs  lib.rs  mixer.rs  source.rs  spatial.rs  voice.rs
crates/floptle-audio/src/effects/: delay.rs  distortion.rs  dynamics.rs  eq.rs  mod.rs  modulation.rs  pitch.rs  reverb.rs
crates/floptle-core/: Cargo.toml
crates/floptle-core/src/: ecs.rs  event.rs  frames.rs  layers.rs  lib.rs  material.rs  math.rs  matter.rs  net.rs  noise.rs  origin.rs  script.rs  time.rs  transform.rs
crates/floptle-editor/: Cargo.toml
crates/floptle-editor/src/: anim.rs  anim_ui.rs  assets.rs  assets_ui.rs  audio.rs  console.rs  curve_edit.rs  dock.rs  gizmo.rs  hierarchy.rs  history.rs  ide.rs  inspector.rs  lua_support.rs  main.rs  matter_catalog.rs  mixer_ui.rs  net.rs  paint_io.rs  paint_mesh.rs  paint_tex.rs  paint_tex_io.rs  paint_ui.rs  play.rs  prefab.rs  prefs.rs  project.rs  render_frame.rs  rig_overrides.rs  scene_ops.rs  scene_tab.rs  script_actions.rs  selection.rs  shader_graph.rs  shader_preview.rs  shaders.rs  shading.rs  space.rs  system_gen.rs  terrain_edit.rs  (+12 more)
crates/floptle-field/: Cargo.toml
crates/floptle-field/examples/: gen_planetoid.rs  gen_solar.rs
crates/floptle-field/src/: chunks.rs  lib.rs  mesh2sdf.rs  mesh_bvh.rs  mesher.rs  procgen.rs  terrain.rs
crates/floptle-hub/: Cargo.toml
crates/floptle-hub/src/: app.rs  auth.rs  config.rs  install.rs  launch.rs  main.rs  registry.rs  releases.rs
crates/floptle-input/: Cargo.toml
crates/floptle-input/src/: lib.rs
crates/floptle-matter/: Cargo.toml
crates/floptle-matter/src/: lib.rs
crates/floptle-net/: Cargo.toml
crates/floptle-net/src/: lagcomp.rs  lib.rs  predict.rs  quic.rs  relay.rs  session.rs  transport.rs  value.rs  wire.rs
crates/floptle-physics/: Cargo.toml
crates/floptle-physics/src/: body.rs  character.rs  compound.rs  gravity.rs  lib.rs  shapes.rs  sim.rs  world.rs
crates/floptle-proof/: Cargo.toml  README.md
crates/floptle-proof/src/: descent.wgsl  main.rs  post.wgsl  present.wgsl  present_plain.wgsl  raymarch.wgsl  walk.wgsl
crates/floptle-relay/: Cargo.toml
crates/floptle-relay/src/: main.rs
crates/floptle-render/: Cargo.toml
crates/floptle-render/examples/: alpha_cutout_probe.rs  blob_probe.rs  capsule_probe.rs  dig_probe.rs  field_shape_probe.rs  flsl_prepass_probe.rs  hangar_probe.rs  hull_probe.rs  lines_probe.rs  material_probe.rs  perf_probe.rs  planetoid_probe.rs  point_light_probe.rs  post_probe.rs  preview_probe.rs  preview_tiles_probe.rs  retro_post_probe.rs  sdf_ao_probe.rs  shader_probe.rs  shadow_probe.rs  sky_deepspace_probe.rs  sky_examples_probe.rs  sky_probe.rs  sky_shader_probe.rs  solar_probe.rs  ssao_probe.rs  terrain_acne_probe.rs  terrain_blend_probe.rs  terrain_closeup_probe.rs  terrain_darkside_probe.rs  terrain_expand_probe.rs  terrain_far_probe.rs  terrain_grazing_probe.rs  terrain_mesh_probe.rs  terrain_probe.rs  terrain_splat_far_probe.rs  terrain_splat_probe.rs  tex_update_probe.rs  texture_filter_probe.rs  ui_shader_probe.rs  (+1 more)
crates/floptle-render/src/: camera.rs  device.rs  field.wgsl  frame.rs  graph.rs  grid.rs  grid.wgsl  lib.rs  lines.rs  mesh.rs  outline.rs  outline.wgsl  particles.rs  particles.wgsl  post.rs  post.wgsl  raster.rs  raster.wgsl  raymarch.rs  raymarch.wgsl  retro.rs  retro.wgsl  ssao.wgsl  tris.rs  ui.rs  ui.wgsl
crates/floptle-render/tests/: flsl_examples.rs
crates/floptle-rules/: Cargo.toml
crates/floptle-rules/src/: lib.rs
crates/floptle-runtime/: Cargo.toml
crates/floptle-runtime/src/: app.rs  camera.rs  main.rs  runner.rs
crates/floptle-scene/: Cargo.toml
crates/floptle-scene/examples/: validate.rs
crates/floptle-scene/src/: anim.rs  lib.rs  vfx.rs
crates/floptle-scene/tests/: solar_assets_parse.rs
crates/floptle-script/: Cargo.toml
crates/floptle-script/src/: api.rs  assembly_api.rs  audio_api.rs  env.rs  host.rs  lib.rs  math_api.rs  net_api.rs  preprocess.rs  save_api.rs  sched_api.rs  space_api.rs  terrain_api.rs  view_api.rs
crates/floptle-shader/: Cargo.toml
crates/floptle-shader/src/: examples.rs  graph.rs  ir.rs  lib.rs  preview.rs  stdlib.rs  text.rs  transpile.rs
crates/floptle-shader/tests/: hull_check.rs
crates/floptle-ui/: Cargo.toml
crates/floptle-ui/src/: lib.rs
crates/floptle-vfx/: Cargo.toml
crates/floptle-vfx/examples/: vfx_probe.rs
crates/floptle-vfx/src/: curve.rs  draw.rs  effect.rs  lib.rs  sim.rs
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  VISION.md  animation-system-proposal.md  animation.md  engine-roadmap.md  export-builds.md  galaxy-streaming-proposal.md  game-roadmap.md  getting-started.md  hub-proposal.md  netcode-design.md  networking-proposal.md  particle-system-proposal.md  physics.md  scripting.md  shader-system-proposal.md  solar-demo-plan.md  terrain-mesh-proposal.md  ui-system-proposal.md  vertex-paint-proposal.md
scripts/: package.sh  publish-public.sh
solar/: .luarc.json  README.md  project.ron
(+235 files in other folders)
