# Floptle — workspace root
#
# A lightweight, hyperoptimized game engine for surreal / otherworldly visuals.
# (c) Fopull LLC. Not yet released. See docs/VISION.md.
#
# The workspace is split into focused crates so each subsystem stays small,
# testable, and independently reasoned about. Binaries: floptle-editor (the
# authoring tool) and floptle-runtime (the game player / exported build host).

[workspace]
resolver = "3"
members = [
    "crates/floptle-core",     # math, ECS, scene-graph facade, events, time, allocator/pools
    "crates/floptle-field",    # implicit geometry: SDFs + CSG/blend ops (shared substrate)
    "crates/floptle-rules",    # Lawset/Realm meta-spine + field-interaction graph
    "crates/floptle-render",   # wgpu render graph, materials, the signature SDF/raymarch look
    "crates/floptle-shader",   # shader IR: graph <-> text, transpile to WGSL via naga
    "crates/floptle-vfx",      # timeline-based particle system + runtime
    "crates/floptle-audio",    # sound: clips, spatial voices, mixer graph + effects
    "crates/floptle-anim",     # skeletal + state-machine animation
    "crates/floptle-physics",  # SDF-first collision + character/vehicle movement
    "crates/floptle-matter",   # deformable matter: morph, soft-body, stick, fracture
    "crates/floptle-input",    # keyboard / mouse / gamepad action mapping
    "crates/floptle-ui",       # in-game UI (anchors, drag-drop layout, scripted behavior)
    "crates/floptle-assets",   # glTF import (Blender), textures, asset database
    "crates/floptle-script",   # Lua (LuaJIT/mlua) scripting host + hot reload
    "crates/floptle-net",      # networking (deferred; clean boundary stub for now)
    "crates/floptle-scene",    # data-driven scene/project model (RON) over the ECS
    "crates/floptle-relay",    # open rendezvous relay: lobby codes, no port-forwarding (bin)
    "crates/floptle-editor",   # egui + egui_dock authoring application (bin)
    "crates/floptle-hub",      # cross-platform launcher / version + project manager (bin)
    "crates/floptle-runtime",  # game runtime / exported build entrypoint (bin)
    "crates/floptle-proof",    # Beat 1: standalone raymarch proof slice (bin)
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"            # placeholder; see docs/decisions/0009-license.md
authors = ["Ty Johnston <tplordtp3@gmail.com>"]
repository = "https://github.com/Fopull-LLC/Floptle"
rust-version = "1.96"

# --- Workspace dependencies ----------------------------------------------------
# Promoted here as each subsystem comes online (versions pinned, matching the
# floptle-proof slice). Crates opt in with `dep.workspace = true`. Remaining
# planned deps (commented) are promoted when their phase lands.
[workspace.dependencies]
glam = "0.33.1"                                          # SIMD math + f64 (DVec3) — large-world
winit = "0.30.13"                                        # cross-platform windowing + raw input
wgpu = "29.0.3"                                           # GPU portability layer — ADR-0002
bytemuck = { version = "1.25.0", features = ["derive"] } # POD casting for GPU buffers
pollster = "0.4.0"                                       # block_on for device bootstrap
log = "0.4.33"                                            # logging facade
env_logger = "0.11.11"                                    # logger backend (binaries only)
gltf = "1.4.1"                                            # Blender -> engine import — Phase 2, ADR-0006
serde = { version = "1", features = ["derive"] }         # scene/project serialization — ADR-0005
ron = "0.8"                                              # human-editable scene/material format
postcard = { version = "1", features = ["use-std"] }     # compact binary wire format — netcode (ADR-0022)
egui = "0.35.0"                                          # editor UI — ADR-0004 (egui-wgpu pins wgpu 29.0.3)
egui-wgpu = "0.35.0"                                     # egui ↔ wgpu render backend
egui-winit = "0.35.0"                                    # egui ↔ winit input/window
egui_dock = "0.20.1"                                     # dockable editor panels
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp", "bmp", "tga", "tiff", "gif", "qoi",
] } # loose texture decode — the formats VFX/game texture packs actually ship

# Promoted in later phases:
# naga        = "29"   # shader IR + WGSL transpile — Phase 3, ADR-0007
# mlua        = "*"    # Lua host (LuaJIT) — Phase 5, ADR-0003
# parry3d     = "*"    # triangle-mesh BVH for imported meshes — Phase 6, ADR-0012
# rapier3d    = "*"    # OPTIONAL rigid-body dynamics only — later, ADR-0012
# image       = "*"    # texture decoding — Phase 2
# parking_lot = "*"    # faster locks
# rustc-hash  = "*"    # fast hashmaps for hot paths

[profile.dev]
opt-level = 1          # keep the editor usably fast even in debug builds

[profile.dev.package."*"]
opt-level = 3          # always optimize dependencies (renderer/math heavy)

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
