[package]
name = "floptle-anim"
description = "Animation: skeletal playback + a lightweight state machine for actions/movement."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
