[package]
name = "floptle-assets"
description = "Assets: glTF import (Blender), textures with smart tiling, materials, asset DB."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-anim = { path = "../floptle-anim" }
floptle-core = { path = "../floptle-core" }
floptle-render = { path = "../floptle-render" }

gltf = { workspace = true } # Blender/glTF 2.0 import (ADR-0006)
image = { workspace = true } # loose texture decode (PNG/JPEG) for materials
serde_json = "1"            # build the glTF JSON chunk for the .glb writer (mirror-apply)
