[package]
name = "floptle-editor"
description = "The Floptle authoring tool: scene view, particle timeline, shader graph, UI/material editors."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "floptle"
path = "src/main.rs"

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-render = { path = "../floptle-render" }
floptle-scene = { path = "../floptle-scene" }
floptle-field = { path = "../floptle-field" }
floptle-shader = { path = "../floptle-shader" }
floptle-vfx = { path = "../floptle-vfx" }
floptle-anim = { path = "../floptle-anim" }
floptle-physics = { path = "../floptle-physics" }
floptle-matter = { path = "../floptle-matter" }
floptle-rules = { path = "../floptle-rules" }
floptle-input = { path = "../floptle-input" }
floptle-ui = { path = "../floptle-ui" }
floptle-assets = { path = "../floptle-assets" }
floptle-script = { path = "../floptle-script" }

winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_dock = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
floptle-net = { path = "../floptle-net" }
