[package]
name = "floptle-field"
description = "Implicit geometry: SDFs + CSG/blend operators (smin/smax) shared by renderer, physics, and matter."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
serde = { workspace = true } # PlanetFill genspec round-trip (G2 on-demand generation)
