[package]
name = "floptle-matter"
description = "Deformable matter: vertex-morph, soft-body (XPBD), sticking/cohesion, stretch & fracture — one unified model."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-field = { path = "../floptle-field" }
floptle-physics = { path = "../floptle-physics" }
