[package]
name = "floptle-net"
description = "Open, transport-agnostic netcode: replication, RPC, sessions (ADR-0022)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-scene = { path = "../floptle-scene" }
serde = { workspace = true }
postcard = { workspace = true }
ron = { workspace = true }
