[package]
name = "floptle-net"
description = "Open, transport-agnostic netcode: replication, RPC, sessions (ADR-0022)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-scene = { path = "../floptle-scene" }
serde = { workspace = true }
postcard = { workspace = true }
ron = { workspace = true }
# The QUIC transport (phase 2e): quinn on a background tokio runtime, bridged
# to the sync `Transport` trait. rcgen mints the dev self-signed cert.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net"] }
bytes = "1"
