[package]
name = "floptle-relay"
description = "The open rendezvous relay: lobby codes, no port-forwarding (ADR-0022)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-net = { path = "../floptle-net" }
