[package]
name = "floptle-render"
description = "Renderer: wgpu render graph, materials, and the signature SDF/raymarch look."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-field = { path = "../floptle-field" }
floptle-rules = { path = "../floptle-rules" }

glam = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }

[dev-dependencies]
# Offscreen render tests (examples/blob_probe.rs) write PNGs to inspect the look.
png = "0.18"
