[package]
name = "floptle-render"
description = "Renderer: wgpu render graph, materials, and the signature SDF/raymarch look."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-field = { path = "../floptle-field" }
floptle-rules = { path = "../floptle-rules" }
floptle-ui = { path = "../floptle-ui" }

glam = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
# Game-UI text: tiny pure-Rust TTF rasterizer feeding the ui pass's glyph atlas.
fontdue = "0.9"

[dev-dependencies]
# Offscreen render tests (examples/blob_probe.rs) write PNGs to inspect the look.
png = "0.18"
# examples/shader_probe.rs compiles .flsl through the production path.
floptle-shader = { path = "../floptle-shader" }
