[package]
name = "floptle-rules"
description = "The meta-spine: a world's laws as data — Lawset/Realm + the field-interaction graph."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-field = { path = "../floptle-field" }
