[package]
name = "floptle-scene"
description = "Data-driven scene + project model (RON) over the ECS — what the editor authors and saves."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-ui = { path = "../floptle-ui" }
# Types only (AudioSource component + mixer graph); no OS audio stack here.
floptle-audio = { path = "../floptle-audio", default-features = false }

serde = { workspace = true }
ron = { workspace = true }
