[package]
name = "floptle-script"
description = "Scripting host: Lua (LuaJIT via mlua), hot-reload, the node-script API surface."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
floptle-input = { path = "../floptle-input" }
floptle-ui = { path = "../floptle-ui" }
floptle-physics = { path = "../floptle-physics" }
glam = { workspace = true }
mlua = { version = "0.10", features = ["luajit", "vendored"] }
floptle-net = { path = "../floptle-net" }
