[package]
name = "floptle-shader"
description = "Shader IR: one source of truth editable as a graph AND as text, transpiled to WGSL."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
floptle-core = { path = "../floptle-core" }
