[package]
name = "floptle-ui"
description = "In-game UI (docs/ui-system-proposal.md): element tree, Free/Pin/Stack layout, draw-list builder. Renderer-agnostic leaf crate by design."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
